--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -13,7 +13,7 @@
 					<a class="nav-link text-white ms-4" href="#">Catalogue</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link text-white ms-4" href="#">S'inscrire</a>
+					<a class="nav-link text-white ms-4" href="{{ path('register') }}">S'inscrire</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link text-white ms-4" href="#">Connexion</a>
