page index done

--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -10,7 +10,7 @@
 					<a class="nav-link active text-white ms-4" aria-current="page" href="#">Accueil</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link text-white ms-4" href="#">Catalogue</a>
+					<a class="nav-link text-white ms-4" href="{{ path('catalogue_index') }}">Catalogue</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link text-white ms-4" href="{{ path('register') }}">S'inscrire</a>
