--- a/templates/catalogue/index.html.twig
+++ b/templates/catalogue/index.html.twig
@@ -9,48 +9,15 @@
 	<h1 class="hometitle text-secondary text-center">catalogue</h1>
 	<section class="container-fluid">
 		<div class="row gap-5 justify-content-center">
-			<div class="col-sm-6 col-md-4 col-lg-2 card card-platform bg-dark">
-				<img class="img-responsive rounded h-50" src="{{ asset('build/images/pc.jpg') }}" alt="Image de PC">
-				<div class="card-body d-flex flex-column justify-content-around ">
-					<h3 class="card-title text-center">{{content[0].name}}</h3>
+			{% for game in games %}
+				<div class="col-sm-6 col-md-4 col-lg-2 card card-platform bg-dark">
+					<img class="img-responsive rounded h-50" src="{{ game.background_image }}" alt="Image de PC">
+					<div class="card-body d-flex flex-column justify-content-around ">
+						<h3 class="card-title text-center">{{game.name}}</h3>
+						<p>Sortie : {{game.released}}</p>
+					</div>
 				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-2 card card-platform bg-dark">
-				<img class="img-responsive rounded h-50" src="{{ asset('build/images/ps5.jpg') }}" alt="Image de PC">
-				<div class="card-body d-flex flex-column justify-content-around ">
-					<h3 class="card-title text-center">{{content[1].name}}</h3>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-2 card card-platform bg-dark">
-				<img class="img-responsive rounded h-50" src="{{ asset('build/images/ps4.jpg') }}" alt="Image de PC">
-				<div class="card-body d-flex flex-column justify-content-around ">
-					<h3 class="card-title text-center">{{content[2].name}}</h3>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-2 card card-platform bg-dark">
-				<img class="img-responsive rounded h-50" src="{{ asset('build/images/xboxone.jpg') }}" alt="Image de PC">
-				<div class="card-body d-flex flex-column justify-content-around ">
-					<h3 class="card-title text-center">{{content[3].name}}</h3>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-2 card card-platform bg-dark">
-				<img class="img-responsive rounded h-50" src="{{ asset('build/images/xboxseries.jpg') }}" alt="Image de PC">
-				<div class="card-body d-flex flex-column justify-content-around ">
-					<h3 class="card-title text-center">{{content[4].name}}</h3>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-2 card card-platform bg-dark">
-				<img class="img-responsive rounded h-50" src="{{ asset('build/images/switch.jpg') }}" alt="Image de PC">
-				<div class="card-body d-flex flex-column justify-content-around ">
-					<h3 class="card-title text-center">{{content[5].name}}</h3>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 col-lg-2 card card-platform bg-dark">
-				<img class="img-responsive rounded h-50" src="{{ asset('build/images/allgames.jpg') }}" alt="Image de PC">
-				<div class="card-body d-flex flex-column justify-content-around ">
-					<h3 class="card-title text-center">Tous les jeux</h3>
-				</div>
-			</div>
+			{% endfor %}
 		</div>
 	</div>
 </section>{% endblock %}
