--- a/templates/catalogue/index.html.twig
+++ b/templates/catalogue/index.html.twig
@@ -14,6 +14,7 @@
 					<img class="img-responsive rounded h-50" src="{{ game.background_image }}" alt="Image de PC">
 					<div class="card-body d-flex flex-column justify-content-around ">
 						<h3 class="card-title text-center">{{game.name}}</h3>
+						<p>Genre : {{game.genres[0]['name']}}</p>
 						<p>Sortie : {{game.released}}</p>
 					</div>
 				</div>
