--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -7,7 +7,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link active text-white ms-4" aria-current="page" href="#">Accueil</a>
+					<a class="nav-link active text-white ms-4" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link text-white ms-4" href="{{ path('catalogue_index') }}">Catalogue</a>
@@ -16,7 +16,7 @@
 					<a class="nav-link text-white ms-4" href="{{ path('register') }}">S'inscrire</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link text-white ms-4" href="#">Connexion</a>
+					<a class="nav-link text-white ms-4" href="{{ path('app_login') }}">Connexion</a>
 				</li>
 			</ul>
 		</div>
