--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,23 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{# ... #}
+{% block title %}Connexion
+{% endblock %}
+
+{% block stylesheets %}
+	{{ encore_entry_link_tags('register') }}
+{% endblock %}
+
+{% block navbar %}
+{% endblock %}
 
 {% block body %}
 	{% if error %}
 		<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 	{% endif %}
 
-	<form action="{{ path('app_login') }}" method="post">
-		<label for="username">Email:</label>
-		<input type="text" id="username" name="_username" value="{{ last_username }}">
+	<div class="container-fluid">
+		<div class="block-registration">
+			<div class="registration-form bg-dark m-auto mb-3 col-lg-3">
+				<h3 class="title text-center mt-4 mb-4 pt-3 fs-4">CONNECTEZ-VOUS</h3>
+				<form action="{{ path('app_login') }}" method="post">
+					<label for="username">Email:
+					</label>
+					<input type="text" id="username" name="_username" value="{{ last_username }}">
+					<label for="password">Mot de passe :</label>
+					<input type="password" id="password" name="_password">
+                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-		<label for="password">Password:</label>
-		<input type="password" id="password" name="_password">
-		<input
-		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-		{# If you want to control the URL the user is redirected to on success
-				        <input type="hidden" name="_target_path" value="/account"> #}
+					{# If you want to control the URL the user is redirected to on success
+												        <input type="hidden" name="_target_path" value="/account"> #}
 
-		<button type="submit">login</button>
-	</form>
+					<button type="submit">Connexion</button>
+				</form>
+			</div>
+		</div>
+	</div>
 {% endblock %}
