--- a/templates/catalogue/booking.html.twig
+++ b/templates/catalogue/booking.html.twig
@@ -14,12 +14,11 @@
 			<h3 class="title text-center mt-4 mb-4 pt-3 fs-4">Réservez votre jeu !</h3>
 			<h3 class="hometitle text-center mt-4 mb-4 pt-3 fs-4">{{game.title}}</h3>
 			<img class="img-responsive rounded mx-3" src="{{ game.image }}" alt="Image du jeu">
-
 			<div class="my-3 col-10 m-auto fs-5">
-				{{ form_row(form.begin, { 'attr': {'class': 'registration-input'} }) }}
+				{{ form_row(form.begin) }}
 			</div>
 			<div class="my-3 col-10 m-auto fs-5">
-				{{ form_row(form.end, { 'attr': {'class': 'registration-input'} }) }}
+				{{ form_row(form.end) }}
 			</div>
 			<div class="my-3 col-10 m-auto d-flex justify-content-center">
 				<button type="submit" class="btn btn-primary col-10 my-3 fs-5 p-1">Réserver</button>
