entity genre done

--- a/templates/catalogue/index.html.twig
+++ b/templates/catalogue/index.html.twig
@@ -14,7 +14,7 @@
 					<img class="img-responsive rounded h-50" src="{{ game.image }}" alt="Image du jeu">
 					<div class="card-body d-flex flex-column justify-content-around ">
 						<a href="{{ path('catalogue_show', {id: game.id}) }}" class="card-title text-center">{{game.title}}</a>
-						<p>Genre : {{game.genre}}</p>
+						{# <p>Genre : {{game.genre}}</p> #}
 						<p>Sortie : </p>
 					</div>
 				</div>
