fix message fait

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,7 @@
 				<h1 class="hometitle">Bienvenue sur</h1>
 				<h1 class="hometitle text-secondary">PlayFree !</h1>
 				<p class="subtitle fs-3">Ici, la solidarité entre gamers prend tout son sens.</p>
-				<p>Tu cherches un jeu ? Parcours le catalogue et trouve un gamer pour te le prêter !</p>
+				<p>Tu cherches un jeu ? Parcours le catalogue et réserve-le !</p>
 			</div>
 			<div class="col-6 d-flex justify-content-center align-items-center">
 				<img src="{{ asset('build/images/gaming.jpg') }}" alt="Image de joueur">
