--- a/templates/catalogue/booking.html.twig
+++ b/templates/catalogue/booking.html.twig
@@ -10,8 +10,8 @@
 {% block body %}
 	<div class="container-fluid">
 		{{ form_start(form) }}
+			<h3 class="game-title text-center mb-4 pt-3 fs-4">Réservez votre jeu !</h3>
 		<div class="card card-show bg-dark m-auto mb-3 col-lg-3">
-			<h3 class="title text-center mt-4 mb-4 pt-3 fs-4">Réservez votre jeu !</h3>
 			<h3 class="hometitle text-center mt-4 mb-4 pt-3 fs-4">{{game.title}}</h3>
 			<img class="img-responsive rounded mx-3" src="{{ game.image }}" alt="Image du jeu">
 			<div class="my-3 col-10 m-auto fs-5">
