--- a/templates/catalogue/show.html.twig
+++ b/templates/catalogue/show.html.twig
@@ -8,12 +8,12 @@
 	<section class="container-fluid">
 		<div class="row gap-5 justify-content-center">
 			<div class="col-sm-6 col-md-4 col-lg-3 card card-show bg-dark">
-				<h3 class="hometitle text-center mt-4 mb-4 pt-3 fs-4">{{game.title}}</h3>
+				<h3 class="hometitle text-center mt-2 mb-4 pt-3 fs-4">{{game.title}}</h3>
 				<img class="img-responsive rounded" src="{{ game.image }}" alt="Image du jeu">
 				<div class="d-flex flex-column justify-content-around">
 					<p>Genre : {{game.genre}}</p>
-					<p>Sortie :</p>
-					<a href="{{ path('catalogue_book', {id: game.id}) }}" class="fs-2">Réserver ?</a>
+					<p>Sortie : {{game.sortie}}</p>
+					<a href="{{ path('catalogue_book', {id: game.id}) }}" class="btn btn-lg btn-secondary game-title text-dark mb-3">Réserver ?</a>
 				</div>
 			</div>
 		</div>
