--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-primary">
 	<div class="container-fluid">
 		<h1 class="logo navbar-brand text-white fs-1 ms-3 me-5" href="#">Playfree</h1>
-		<button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
@@ -12,12 +12,21 @@
 				<li class="nav-item">
 					<a class="nav-link text-white ms-4" href="{{ path('catalogue_index') }}">Catalogue</a>
 				</li>
+				{% if app.user %}
+				<li class="nav-item">
+					<a class="nav-link text-white ms-4" href="{{ path('catalogue_voirbookings') }}">Réservations</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-white ms-4" href="{{ path('app_logout') }}">Déconnexion</a>
+				</li>
+				{% else %}
 				<li class="nav-item">
 					<a class="nav-link text-white ms-4" href="{{ path('register') }}">S'inscrire</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link text-white ms-4" href="{{ path('app_login') }}">Connexion</a>
 				</li>
+				{% endif %}
 			</ul>
 		</div>
 	</div>
