--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,15 +8,15 @@
 {% endblock %}
 
 {% block body %}
-	<section class="container-fluid h-100">
-		<div class="row h-100 justify-content-center">
-			<div class="col-6 d-flex flex-column justify-content-center align-items-center text-light">
-				<h1 class="hometitle">Bienvenue sur</h1>
+	<section class="container-fluid h-100 mt-md-5 mt-3">
+		<div class="row h-100 flex-column flex-md-row justify-content-center align-items-center">
+			<div class="col-md-6 col-12 d-flex flex-column justify-content-center align-items-center text-light">
+				<h1 class="hometitle text-center">Bienvenue sur</h1>
 				<h1 class="hometitle text-secondary">PlayFree !</h1>
-				<p class="subtitle fs-3">Ici, la solidarité entre gamers prend tout son sens.</p>
+				<p class="subtitle fs-3 text-center my-4">Ici, la solidarité entre gamers prend tout son sens.</p>
 				<p>Tu cherches un jeu ? Parcours le catalogue et réserve-le !</p>
 			</div>
-			<div class="col-6 d-flex justify-content-center align-items-center">
+			<div class="col-6 d-flex justify-content-center align-items-center mb-4">
 				<img src="{{ asset('build/images/gaming.jpg') }}" alt="Image de joueur">
 			</div>
 		</div>
