--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,11 +11,11 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container-fluid">
+	<div class="container-fluid mt-5">
 		<div class="block-registration">
 			{{ form_start(registrationForm) }}
 			<div>
-				<div class="registration-form bg-dark m-auto mb-3 col-lg-3">
+				<div class="registration-form bg-dark m-auto mb-3 col-10 col-lg-3">
 					<h3 class="title text-center mt-4 mb-4 pt-3 fs-4">CRÉEZ UN COMPTE</h3>
 
 					<div class="my-3 col-10 m-auto fs-5">
@@ -31,7 +31,7 @@
 						{{ form_row(registrationForm.plainPassword, { 'attr': {'class': 'registration-input'} }) }}
 					</div>
 					<div class="my-3 col-10 m-auto d-flex justify-content-center">
-						<button type="submit" class="btn btn-primary col-10 my-3 fs-5 p-1">Valider</button>
+						<button type="submit" class="btn btn-secondary col-10 mt-5 mb-4 fs-5 p-1">Valider</button>
 					</div>
 				</div>
 			</div>
