--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -11,3 +11,10 @@
 p {
     max-width: 90%;
 }
+
+.game-title {
+    font-family: $font-title;
+    text-decoration: none;
+    color: black;
+    width: 15rem;
+}
