--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,6 +15,7 @@
 				<h1 class="hometitle text-secondary">PlayFree !</h1>
 				<p class="subtitle fs-3 text-center my-4">Ici, la solidarité entre gamers prend tout son sens.</p>
 				<p>Tu cherches un jeu ? Parcours le catalogue et réserve-le !</p>
+				<a class="btn btn-lg btn-secondary game-title my-5" href="{{ path('catalogue_index') }}">Catalogue</a>
 			</div>
 			<div class="col-6 d-flex justify-content-center align-items-center mb-4">
 				<img src="{{ asset('build/images/gaming.jpg') }}" alt="Image de joueur">
