--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -14,7 +14,7 @@
 				</li>
 				{% if app.user %}
 				<li class="nav-item">
-					<a class="nav-link text-white ms-4" href="{{ path('catalogue_voirbookings') }}">Réservations</a>
+					<a class="nav-link text-white ms-4" href="{{ path('reservations_index') }}">Réservations</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link text-white ms-4" href="{{ path('app_logout') }}">Déconnexion</a>
